# quicken

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
agent/: intent-card.json  proof-lanes.toml
quicken/: Cargo.toml
quicken-attest/: Cargo.toml
quicken-attest/src/: delta.rs  lib.rs  receipt.rs  store.rs  streak.rs
quicken-attest/tests/: acceptance.rs
quicken-probe/: Cargo.toml
quicken-probe/src/: crossdep.rs  env.rs  evidence.rs  lib.rs  report.rs  verdict.rs
quicken-probe/src/probes/: agentns.rs  memlog.rs  mod.rs  provfs.rs  warden.rs
quicken-probe/tests/: acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  crossdep.rs
quicken/src/: main.rs  notify.rs  remedy.rs  watch.rs
quicken/tests/: acceptance_ac1.rs  acceptance_ac4.rs  acceptance_watch_ac1.rs  acceptance_watch_ac3.rs
scripts/: quicken-notify.service  quicken-watch.service  quicken-watch.timer
