[package]
name = "quicken-attest"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Wintermute quicken attest — persist liveness receipts, compute deltas, track inert streaks"
publish = false

[lints]
workspace = true

[dependencies]
quicken-probe = { path = "../quicken-probe" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
