[package]
name = "quicken-probe"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Wintermute kernel primitive liveness probes — classify every primitive as Live, LiveDegraded, InstalledNotActivated, StagedNotInstalled, Inert, or Unknown"
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
